--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ cachetools
 CacheToolsUtils
 networkx
 rtree
-mujoco==2.3.7
+mujoco
 gymnasium==0.28.1
 stable-baselines3>=2.0.0
 opencv-python
+tensorboard
